--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "rootDir": "./src",
     "strict": true,
     "declaration": true,
+    "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true
